@@ -17,6 +17,7 @@ v 8.10.2 (unreleased)
   - Rescue Rugged::OSError (lock exists) when creating references. !5497
   - Fix expand all diffs button in compare view. !5500
   - Show release notes in tags list. !5503
+  - Fix a bug where forking a project from a repository storage to another would fail. !5509
 
 v 8.10.1
   - Refactor repository storages documentation. !5428
